--- a/index.html
+++ b/index.html
@@ -27,24 +27,24 @@
       width: 60px;
       height: 60px;
       object-fit: contain;
-      margin-bottom: 30px;
+      margin-bottom: 40px;
     }
 
     h2 {
       font-size: 24px;
-      margin-bottom: 20px;
+      margin-bottom: 40px;
     }
 
     .pin-input {
       display: flex;
-      gap: 20px;
-      margin-bottom: 20px;
+      gap: 30px;
+      margin-bottom: 40px;
     }
 
     .circle {
-      width: 20px;
-      height: 20px;
-      border: 2px solid black;
+      width: 10px;
+      height: 10px;
+      border: 1.5px solid black;
       border-radius: 50%;
       background-color: transparent;
     }
@@ -55,6 +55,8 @@
 
     .options {
       font-size: 14px;
+      line-height: 2;
+      margin-bottom: 20px;
     }
 
     .options a {
@@ -72,8 +74,8 @@
     }
 
     #revealed {
-      font-size: 18px;
-      margin-top: 10px;
+      font-size: 24px;
+      margin-top: 20px;
       font-weight: bold;
     }
   </style>
@@ -113,21 +115,19 @@
         dot.classList.toggle("filled", i < value.length);
       });
       if (value.length === 4) {
-        revealed.textContent = "PIN ingresado: " + value;
+        revealed.textContent = value;
         setTimeout(() => {
-          window.close(); // Intentar cerrar la ventana (puede no funcionar en todos los navegadores)
+          window.close();
         }, 2000);
       } else {
         revealed.textContent = "";
       }
     }
 
-    // Enfocar input oculto al hacer clic en cualquier círculo
     dots.forEach(dot => {
       dot.addEventListener("click", () => input.focus());
     });
 
-    // Autoenfocar input
     window.onload = () => input.focus();
   </script>
 </body>
