--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
       justify-content: flex-start;
       height: 100vh;
       padding-left: 30px;
+      position: relative;
+    }
+
+    .question-icon {
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      width: 20px;
+      height: 20px;
     }
 
     .container {
@@ -60,7 +69,7 @@
     }
 
     .options a {
-      color: #0033cc;
+      color: #000000;
       text-decoration: none;
     }
 
@@ -81,6 +90,8 @@
   </style>
 </head>
 <body>
+  <img src="question.png" alt="Help" class="question-icon" />
+
   <div class="container">
     <div class="logo">
       <img src="logo.png" alt="Logo" />
